[gd_scene load_steps=2 format=3 uid="uid://yn600f7addoh"]

[ext_resource type="Script" path="res://Scripts/CookerComponent.gd" id="1_34ogp"]

[node name="CookerComponent" type="Node3D"]
script = ExtResource("1_34ogp")

[node name="CookingTicksTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="CookingTicksTimer" to="." method="_on_cooking_ticks_timer_timeout"]
